# depth-based-template-mesh

./: .flake8  .gitignore  Makefile  README.md  create_3dr2n2_with_depth.py  main.py  mypy.ini  noxfile.py  pyproject.toml  setup.sh
config/: create_3dr2n2_with_depth.yml  main.yml
scripts/: run.py
scripts/processing-template/: README.md  main.py  main_parallel.py
scripts/rendering/: README.md  create_3dr2n2_with_depth.py  main.py
src/lib3d/: __init__.py  load_obj.py  types.py  utils.py
template/: template_ellipsoid.mtl
