[tool.black]
line-length = 120

# mypy global options:

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

# mypy per-module options:

[[tool.mypy.overrides]]
module = "sympy.*"
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "bpy.*",
    "cv2.*",
    "mathutils.*",
    "nptyping.*",
    "numpy.*",
    "PIL.*",
]
ignore_missing_imports = true

[tool.poetry]
name = "create_sphere"
version = "0.1.0"
description = ""
authors = ["pollenjp <polleninjp@gmail.com>"]
packages = [
    { include = "lib3d", from = "src" },
]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
numpy = "^1.21.4"
omegaconf = "^2.1.1"
sympy = "^1.10.1"
Pillow = "^9.1.1"
opencv-python = "^4.6.0"


[tool.poetry.dev-dependencies]
black = "^21.11b1"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.910"

[tool.poetry.group.dev.dependencies]
nptyping = "^2.3.1"
nox = "^2022.8.7"
autoflake8 = "^0.4.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
